2018/styles.css
/* generic styles */

body {
    padding: 0;
    margin: 0;
    font-family: Roboto Slab, Helvetica, Arial, sans-serif;
    font-weight: 300;
    font-size: 1.25em;
    background: #242424;
    color: #ddd;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Nunito Sans', sans-serif;
    color: #fff;
}

h1, h2 {
    font-size: 1.5em;
}

abbr[title], acronym[title] {
    text-decoration: none;
}

/* inline SVG icons */

svg.icon {
    fill:currentColor; /* for outlined SVGs (otherwise use stroke) */
    width: 1em;
    height: 1em;
    vertical-align: -0.1em; /* tweaks vertical alignment next to text */
}

/* IE11 patch */

header, main, footer, section, nav, main { display: block; }

/* grid layout */

@media (min-width: 55rem) {

    header, footer {
        margin: 0;
        display: -ms-grid;
        -ms-grid-columns: minmax(1rem, 1fr) (4.25rem)[12] minmax(1rem, 1fr);
        display: grid;
        grid-template-columns: minmax(1rem, 1fr) repeat(12, 4.25rem) minmax(1rem, 1fr);
        grid-column-gap: 0.5rem;
    }

    header {
        align-items: end;
    }

    header > *, footer > * {
        -ms-grid-column: 2;
        -ms-grid-column-span: 12;
        grid-column: 2/14;
    }

    header #logo {
        -ms-grid-column: 2;
        -ms-grid-column-span: 5;
        -ms-grid-row: 1;
        grid-column: 2/7;
    }

    header #mainnav {
        -ms-grid-column: 7;
        -ms-grid-column-span: 14;
        -ms-grid-row: 1;
        grid-column: 7/14;
        -ms-grid-row-align: end;
    }

    footer #logo_hashtag {
        -ms-grid-column: 2;
        -ms-grid-column-span: 2;
        -ms-grid-row: 1;
        grid-column: 2/4;
    }

    footer nav {
        -ms-grid-column: 4;
        -ms-grid-column-span: 10;
        -ms-grid-row: 1;
        grid-column: 4/14;
    }

    main {
        margin: 0;
        display: -ms-grid;
        -ms-grid-columns: minmax(1rem, 1fr) 50rem minmax(1rem, 1fr);
        display: grid;
        grid-template-columns: minmax(1rem, 1fr) 55rem minmax(1rem, 1fr);
        grid-column-gap: 0.5rem;
    }

    main > * {
        -ms-grid-column: 2;
        grid-column: 2;
    }

    /* specific subgrids */

    main #intro-twitter {
        display: -ms-grid;
        -ms-grid-columns: (4.25rem)[12];
        display: grid;
        grid-template-columns: repeat(12, 4.25rem);
        grid-column-gap: 0.5rem;
    }

    main #intro-twitter > #intro {
        -ms-grid-column: 1;
        -ms-grid-column-span: 8;
        grid-column: 1/9;
    }

    main #intro-twitter > #twitter {
        -ms-grid-column: 9;
        -ms-grid-column-span: 4;
        grid-column: 9/13;
    }

    .supporter {
        display: -ms-grid;
        -ms-grid-columns: (4.25rem)[12];
        display: grid;
        grid-template-columns: repeat(12, 4.25rem);
        grid-column-gap: 0.5rem;
    }


    .supporter .supporter_name {
        -ms-grid-column: 1;
        -ms-grid-column-span: 3;
        grid-column: 1/4;
    }

    .supporter .supporter_details {
        -ms-grid-column: 4;
        -ms-grid-column-span: 9;
        grid-column: 4/13;
    }

}

/* ugly IE hack for SVG sizing */

@media screen and (min-width:0\0) {
    footer #logo_hashtag svg {
        height: 55px; 
    }
}

/* specific styles */

nav {
  padding-bottom: 1em;
}

nav * {
  display: inline;
  margin: 0;
  padding: 0;
}

nav ul {
  padding-left: 0.25em;
}

nav ul li {
  padding-right: 0.75em;
}

header p {
    color: #999;
    margin: 0;
}

main li {
  margin-bottom: 1em;
}


footer {
    font-size: 0.8em;
}

a, a:link, a:visited {
    color: #ffe400;
}

a:focus, a:hover, a:active {
    background: #ffe400;
    color: #282828;
    padding: 0 2px; /* using px rather than em, as 0.25em / -0.25em seems to have rounding issues leading to subtle sub-pixel dancing */
    margin: 0 -2px;
    outline: none;
}

header {
    background: #ffe400;
    padding-top: 2rem;
    font-family: 'Nunito Sans', sans-serif;
}

header #mainnav {
    padding-left: 1em;
    text-transform: capitalize;
    font-size: 1.25rem;
    word-spacing: -0.1em;
}

header #mainnav a[href*="id24u"] {
    text-transform: none; /* special case for id24u which canonically is lowercase */
}

header #mainnav a {
    color: #000;
    font-weight: bold;
    text-decoration: none;
}

footer {
    background: #111;
    padding: 2rem 0;
}

header nav a:focus,
header nav a:hover,
header nav a:active {
    border-bottom: 0.25em solid #998000;
}

header nav a[aria-current] {
    border-bottom: 0.25em solid #111;
}

footer nav a[aria-current] {
    text-decoration: none;
    border-bottom: 0.25em solid;
}

button, .session .videostream {
    font-family: Roboto Slab, Helvetica, Arial, sans-serif;
    font-size: 1em;
    font-weight: bold;
    text-decoration: none;
    display: inline;
    padding: 0 0.25em;
}

.session .videostream:focus,
.session .videostream:hover,
.session .videostream:active {
    padding: 0 0.25em;
    margin: 0;
}

#signup, #connect, #archive {
    display: block;
    max-width: 14em;
    text-align: center;
    font-family: 'Nunito Sans', sans-serif;
    font-size: 1.5em;
    font-weight: bold;
    padding: 0.5em;
    background: #ffe400;
    border: 3px #ffe400 solid;
    color: #282828;
    border-radius: 0.25em;
    margin: 1em auto;
    text-decoration: none;
}

#signup:focus, #connect:focus, #archive:focus,
#signup:hover, #connect:hover, #archive:hover,
#signup:active, #connect:active, #archive:active {
    background: #282828;
    color: #ffe400;
    text-decoration: underline;
    outline: none;
}

aside {
    background-color: #282828;
    border: 2px #444 solid;
    border-radius: 5px;
    padding: 1em;
    font-size: 0.75em;
}

#archive { width: 15em; }

#signup:focus, #signup:hover {
    background: #0B3160;
    outline: none;
}

.jumbo {
    font-size: 1.5em;
    font-weight: bold;
    display: block;
    margin: -0.25em 0 0 0;
}

#intro p, section p {
    /* font-family: Helvetica, Arial, sans-serif; */
    line-height: 1.5;
    font-size: 0.9em;
}

section h2 {
    border-bottom: 1px solid #777;
}

section {
    margin-bottom: 2em;
}

.session {
    position: relative;
    margin: 0 -0.5em;
    padding: 2em 0.5em 2em 8.5em;
    border-bottom: 1px #444 solid;
}

.session.now {
    border-left: 0.25em solid #ffe400;
    position: relative;
    left: -0.25em;
}

.session h2 {
    margin: 0 0 0.25em 0;
    font-size: 1.2em;
    border: none;
}

.session h3 {
    font-size: 1em;
    color: #fcfcfc;
}

.session button, .session .videostream {
    border: none;
    background: transparent;
    font-size: 0.8em;
    color: #ffe400;
}

.session button:focus, .session button:hover,
.session .videostream:focus, .session .videostream:hover {
    outline: 2px #ffe400 solid;
}

.session_time {
    position: absolute;
    top: 0.7em;
    left: 0.25em;
    font-size: 2em;
    font-weight: normal;
}

.session_time .session_time_local_ampm {
    font-size: 0.3em;
}

.session_time_offset {
    font-size: 0.3em !important;
}

.session_time .session_day_local,
.session_time .session_time_offset {
    font-size: 0.45em;
    display: block;
    margin-top: -0.5em;
}

.session_time .session_day_local {
    margin-bottom: 0.5em;
    padding-left: 0.1em;
    font-size: 0.3em !important;
    color: #888;
}

.session_time .session_day_local.datechange {
    color: #fff;
    font-size: 0.45em !important;
}

.session_time .session_time_offset {
    color: #888;
}

#time_machine {
    color: #ffe400;
}

.session_time .now {
    display: block;
    font-size: 0.3em;
    color: #ffe400;
    font-weight: bold;
    margin: 0.85em 0 -0.55em 0;
}

.session_presenter,
.session_title {
    display: block;
}

.session_presenter {
    font-weight: normal;
    color: #ffe400;
}

.session_abstract {
    margin-top: 1em;
    color: #bbb;
}

.session_presenter_bio {
    margin-top: 1em;
    color: #bbb;
}

.session ul.pres_info {
    padding: 0;
    margin: 1em 0 0 0;
}

.session ul.pres_info li {
    list-style-type: none;
    display: inline;
    padding: 0;
    margin: 0 1em 0 0;
}

.session ul.pres_info li a {
    text-decoration: none;
    white-space: nowrap;
}

.supporter {
    position: relative;
    margin: 0 -0.5em;
    padding: 2em 0.5em 2em 0.5em;
    border-bottom: 1px #444 solid;
}

.supporter > h2 {
    border: none;
}

.supporter ul.supporter_info {
    padding: 0;
    margin: 1em 0 0 0;
}

.supporter ul.supporter_info li {
    list-style-type: none;
    display: inline;
    padding: 0;
    margin: 0 1em 0 0;
}

.supporter ul.supporter_info li a {
    text-decoration: none;
    white-space: nowrap;
}

a.youtube {
    text-decoration: none;
}

a.slides {
    text-decoration: none;
}

.hidden {
    display: none !important;
}

.visually-hidden {
    position:absolute;
    width:1px;
    height:1px;
    padding:0;
    margin:-1px;
    overflow:hidden;
    clip:rect(0,0,0,0);
    border:0;
}

/* adaptations for smaller screens */

@media (max-width: 55rem) {
    body {
        font-size: 1.1em;
    }

    header, footer {
        -ms-grid-columns: minmax(1rem, 1fr) (1fr)[12] minmax(1rem, 1fr);
        grid-template-columns: minmax(1rem, 1fr) repeat(12, 1fr) minmax(1rem, 1fr);
    }

    header #logo {
        -ms-grid-column: 2;
        -ms-grid-column-span: 12;
        -ms-grid-row: 1;
        grid-column: 2/14;
    }

    header #mainnav {
        -ms-grid-column: 2;
        -ms-grid-column-span: 12;
        -ms-grid-row: 2;
        grid-column: 2/14;        
    }

    main #intro {
        -ms-grid-column: 2;
        -ms-grid-column-span: 12;
        -ms-grid-row: 3;
        grid-column: 2/14;
    }

    main #twitter {
        -ms-grid-column: 2;
        -ms-grid-column-span: 12;
        -ms-grid-row: 4;
        grid-column: 2/14;
    }

    main #cfp, main #info {
        -ms-grid-row: 5;
    }

    footer #logo_hashtag {
        -ms-grid-column: 2;
        -ms-grid-column-span: 4;
        -ms-grid-row: 6;
        grid-column: 2/6;
    }
    
    footer nav {
        -ms-grid-column: 2;
        -ms-grid-column-span: 12;
        -ms-grid-row: 7;
        grid-column: 2/14;
    }

    h1 {
        font-size: 1.25em;
    }

    h2 {
        line-height: 1;
    }

    .session {
        padding-top: 0.5em;
        padding-left: 0.5em;
    }

    .session_time {
        position: relative;
        top: 0;
        left: 0;
    }

    .session_time .session_time_local_ampm {
        font-size: 0.4em;
    }

    .session_time .session_day_local,
    .session_time .session_time_offset {
        display: inline;
    }
}

